--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,6 +11,7 @@
     </li>
     <li><a routerLink="/sell" routerLinkActive="router-link-active">Sell</a>
     <li><a routerLink="/display" routerLinkActive="router-link-active">Display</a>
+    <li><a routerLink="/userDisplay" routerLinkActive="router-link-active">Image</a>
     <li style="float:right"><a href="#about">Logout</a></li>
     <li style="float:right"><a href="#viewProfile">View Profile</a></li>
   </ul>
